@@ -16,6 +16,7 @@ address-edit: new action 'name-rename' to allow renaming based on template strin
 address-edit: new filters 'overriden.at.lower.level' and 'overrides.upper.level', 'ip4.includes-full', 'ip4.includes-full-or-partial', 'object is.iprange', 'object is.fqdn', 'object is.ip-netmask', netmask  >,<,=,! XX
 address-edit: new actions 'name-removePrefix, name-removeSuffix', 'tag-add', 'tag-add-force', 'tag-remove', 'tag-remove-all', 'tag-remove-regex'
 service-edit: new actions 'name-removePrefix, name-removeSuffix'
+service-edit: new filters 'object is.tcp' and 'object is.udp'
 tag-edit: new filters 'name eq', 'name contains', 'name eq.nocase', 'location is' and 'refcount - >,<,=,!'
 override-finder: when firewall is not available, instead of exit wit error, program will skip it and warn user.
 
